featL 完善druid3兼容,完善javadoc